Mailfilter ChangeLog
-=-=-=-=-=-=-=-=-=-=

Mon Jan  1 14:37:49 CET 2007  Andreas Bauer  <baueran@gmail.com>

 * configure.ac: remove all m4 and gettext references
 * Makefile.am: reflect changes

Sun Dec 31 21:40:38 CET 2006  Andreas Bauer  <baueran@in.tum.de>

 * configure.ac: update version number and copyright information
 * src/preferences.*: use singleton design pattern
 * src/rcfile.yy: reflect changes
 * src/mailfilter.cc: reflect changes
 * src/socket.cc: reflect changes
 * src/feedback.*: use singleton design pattern

Fri Jul  8 11:29:20 CEST 2005 Andreas Bauer  <baueran@in.tum.de>

 * src/protocol.hh: add virtual destructor
 * all file: change date in copyright statement

Fri Jul  8 11:29:20 CEST 2005 Alexander Kaganyuk <kaganyuk@ccc.vinnica.ua>

 * src/Makefile.am: change $^ to $<

Sun Dec  5 10:01:16 CET 2004  Andreas Bauer  <baueran@in.tum.de>
 
 * src/rcfile.ll, configure.ac: check for presence of wordexp.h

Sat Dec  4 22:11:28 MET 2004  Andreas Bauer  <baueran@in.tum.de>

 * src/apop.cc: add include <strings.h>
 * src/Makefile.am: remove mv long options

Sun Nov 21 10:40:39 CET 2004  Kai Hildebrandt <kai.hildebrandt@web.de>
                              Andreas Bauer  <baueran@in.tum.de>

 * src/Makefile.am: fix 'mv-dependencies' in rfc822parser.cc target

Sat Nov 20 16:51:58 CET 2004  Andreas Bauer  <baueran@in.tum.de>

 * src/preferences.*: remove prefs namespace and make class static
 * src/*.cc,*.hh: remove all references to prefs namespace

Sun Oct 10 15:11:44 CEST 2004  Andreas Bauer  <baueran@in.tum.de>

 * src/*.cc,*.hh: change const functions to function type const

Sat Aug  7 20:21:47 CEST 2004  Andreas Bauer  <baueran@in.tum.de>

 * src/socket.cc: prepare IMAP support
 * src/apop.cc:login: check for timestamp server message

Sat Jun  5 15:22:58 CEST 2004  Hilmar Preusse <hille42@web.de>

 * NEWS: add information about rcfile changes

Sun May 30 16:03:58 CEST 2004  Andreas Bauer <baueran@in.tum.de>

 * src/apop.cc:login: new